app/rs/src/renderer_bindings.rs

// This file was generated by AI (GitHub Copilot) and is NOT APPLICABLE for copyright.
// This is part of the threetwi project, a fork of twoyi (https://github.com/twoyi/twoyi).

//! Direct FFI bindings to FOSS OpenGL renderer functions
//!
//! These functions are now statically linked into libtwoyi.so (built from
//! FOSS sources using native Android EGL/GLES) instead of being dynamically
//! loaded via dlopen. This eliminates the dependency on any proprietary library.

use std::os::raw::{c_int, c_void};
use log::info;

/// Initialize the OpenGL renderer library bindings
/// Returns true (renderer is always available since it's embedded)
pub fn init_renderer() -> bool {
    info!("FOSS OpenGL renderer is embedded in libtwoyi.so (using native Android EGL/GLES)");
    true
}

/// Check if the renderer library is available
/// Returns true (renderer is always available since it's embedded)
pub fn is_renderer_available() -> bool {
    true
}

// Public unsafe functions that call the C renderer functions
// These are provided by renderer_wrapper.cpp linked into libtwoyi.so

#[allow(dead_code)]
#[inline]
pub unsafe fn destroyOpenGLSubwindow() -> c_int {
    extern "C" {
        fn destroyOpenGLSubwindow() -> c_int;
    }
    destroyOpenGLSubwindow()
}

#[allow(dead_code)]
#[inline]
pub unsafe fn repaintOpenGLDisplay() {
    extern "C" {
        fn repaintOpenGLDisplay();
    }
    repaintOpenGLDisplay()
}

#[inline]
pub unsafe fn setNativeWindow(window: *mut c_void) -> c_int {
    extern "C" {
        fn setNativeWindow(window: *mut c_void) -> c_int;
    }
    setNativeWindow(window)
}

#[inline]
pub unsafe fn resetSubWindow(
    p_window: *mut c_void,
    wx: c_int,
    wy: c_int,
    ww: c_int,
    wh: c_int,
    fbw: c_int,
    fbh: c_int,
    dpr: f32,
    z_rot: f32,
) -> c_int {
    extern "C" {
        fn resetSubWindow(
            p_window: *mut c_void,
            wx: c_int,
            wy: c_int,
            ww: c_int,
            wh: c_int,
            fbw: c_int,
            fbh: c_int,
            dpr: f32,
            z_rot: f32,
        ) -> c_int;
    }
    resetSubWindow(p_window, wx, wy, ww, wh, fbw, fbh, dpr, z_rot)
}

#[inline]
pub unsafe fn startOpenGLRenderer(
    win: *mut c_void,
    width: c_int,
    height: c_int,
    xdpi: c_int,
    ydpi: c_int,
    fps: c_int,
) -> c_int {
    extern "C" {
        fn startOpenGLRenderer(
            win: *mut c_void,
            width: c_int,
            height: c_int,
            xdpi: c_int,
            ydpi: c_int,
            fps: c_int,
        ) -> c_int;
    }
    startOpenGLRenderer(win, width, height, xdpi, ydpi, fps)
}

#[inline]
pub unsafe fn removeSubWindow(window: *mut c_void) -> c_int {
    extern "C" {
        fn removeSubWindow(window: *mut c_void) -> c_int;
    }
    removeSubWindow(window)
}
